@@ -61,5 +61,6 @@ wubi (9.04) UNRELEASED; urgency=low
   * Fixed ISO backup during uninstallation
   * Added finish pages
   * Added preliminary code to generate virtual disk files, to be completed
+  * Added timezone detection
 
- -- Agostino Russo <agostino.russo@gmail.com>  Mon, 05 Jan 2009 01:45:55 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Wed, 07 Jan 2009 00:19:53 +0000
